feat: update mounts.kv, cvar_defaults.cfg, and moddefaults.txt from p2ce

--- a/cfg/mounts.kv
+++ b/cfg/mounts.kv
@@ -1,7 +1,10 @@
 "Mounts"
 {
+	// =========================================================================================
 	// This file is a list of SteamApp objects defining the Steam apps you want to mount.
-	// Assets from apps higher in the list are preferred more than ones lower.
+	// Assets from apps higher in the list are preferred more than ones lower. Some games are
+	// known to break others if they override any existing base game content, e.g.: hl2dm.
+	// 
 	// The format for this file is as follows:
 	// "<appID>" // ex. "620" is Portal 2
 	//	{
@@ -13,81 +16,245 @@
 	//			"dir"	"dir_inside" // mounts folder: GameDir\mod_folder\dir_inside
 	//		}
 	//	}
+	// =========================================================================================
 
-	// CS:GO
-	// IF YOU WANT TO MOUNT CSGO CONTENT (uncomment this for the chickens): UNCOMMENT (remove the double slashes //) OF THE LINES BETWEEN THE ASTERICKS. Do NOT remove the double slashes from the line with the astericks (*)
-	//**********************
+	// Uncomment the lines between the asterisks surrounding any Valve game's mount dirs to mount it.
+	// Do not remove the double-slashes from the lines containing asterisks, as it will break your mounts.kv file.
+
+	// Counter-Strike: Global Offensive (AppID 730)
+	// **********************
 	// 730
 	// {
-	//	"csgo"
+	// 	"csgo"
+	// 	{
+	// 		"vpk"	"pak01"
+	// 		"dir"	"download"
+	// 	}
+	// }
+	// **********************
+
+	// Half-Life 2: Episode Two (AppID 420)
+	// **********************
+	// 420
+	// {
+	//	"ep2"
 	//	{
-	//		"vpk"	"pak01"
-	//		"dir"	"download"
+	//		"vpk" "ep2_pak"
+	//	}
+	//
+	//	// Needed for Ep2 to work properly as a standalone game mount;
+	//	// not mounting ep1's folder + vpks will result in missing assets
+	// 	// persisting across the various ep2_outland maps.
+	//	//
+	//	// You do not need to mount AppID 380 (Half-Life 2: Episode One)
+	//	// if you have Ep2 installed, as both games share content between each other.
+	//	"episodic"
+	//	{
+	//		"vpk"	"ep1_pak"	
 	//	}
 	// }
-	//**********************
+	// **********************
 
-	// CS:S
-	// IF YOU WANT TO MOUNT CS:S CONTENT: UNCOMMENT (remove the double slashes //) OF THE LINES BETWEEN THE ASTERICKS. Do NOT remove the double slashes from the line with the astericks (*)
-	//**********************
+	// Half-Life 2: Episode Two (AppID 380)
+	// Refer to the above if you have Ep2 installed
+	// **********************
+	// 380
+	// {
+	//	"episodic"
+	//	{
+	//		"vpk" "ep1_pak"
+	//	}
+	// }
+	// **********************
+
+	// Half-Life 2: Lost Coast (AppID 340)
+	// **********************
+	// 340
+	// {
+	//	"lostcoast"
+	//	{
+	//		"vpk" "lostcoast_pak"
+	//	}
+	// }
+	// **********************
+
+	// Team Fortress 2 (AppId 440)
+	// Known to override a few hl2 textures with tf2 counterparts, e.g.: hl2 shotgun
+	// worldmodel and concrete walls used across spytech environments
+	// **********************
+	// 440
+	// {
+	//	"tf"
+	//	{
+	//		"vpk" "tf2_misc"
+	//		"vpk" "tf2_sound_misc"
+	//		"vpk" "tf2_sound_vo_english"
+	//		"vpk" "tf2_textures"
+	//	}
+	// }
+	// **********************
+
+	// Half-Life 2 (AppID 220)
+	// **********************
+	// 220
+	// {
+	//	"hl2"
+	//	{
+	//		"vpk" "hl2_misc"
+	//		"vpk" "hl2_pak"
+	//		"vpk" "hl2_sound_misc"
+	//		"vpk" "hl2_sound_vo_english"
+	//		"vpk" "hl2_textures"
+	//	}
+	// }
+	// **********************
+
+	// Source SDK Base 2013 SP (AppID 243730)
+	// Only uncomment the below if you do not own Half-Life 2 or its episodes.
+	// **********************
+	// 243730
+	// {
+	// 	"ep2"
+	// 	{
+	// 		"vpk"	"ep2_pak"
+	// 	}
+	// 	"episodic"
+	// 	{
+	// 		"vpk"	"ep1_pak"	
+	// 	}
+	// 	"hl2"
+	// 	{
+	// 		"vpk"	"hl2_misc"
+	// 		"vpk"	"hl2_pak"
+	// 		"vpk"	"hl2_sound_misc"
+	// 		"vpk"	"hl2_sound_vo_english"
+	// 		"vpk"	"hl2_textures"
+	// 	}
+	// }
+	// **********************
+
+	// ================================================================
+	// Games that break base HL2 compat if mounted above belong here.
+	// Side effects listed below appid.
+	// ================================================================
+
+	// Portal (AppId 400)
+	// Replaces HL2 doors with Aperture counterparts, replaces v_hands/suit equip viewmodel
+	// **********************
+	// 400
+	// {
+	//	"portal"
+	//	{
+	//		"vpk"	"portal_pak"
+	//	}
+	// }
+	// **********************
+
+	// Counter-Strike: Source (AppID 240)
+	// Overrides portal2 footstep soundscripts with low-quality cstrike variants
+	// **********************
 	// 240
 	// {
 	//	"cstrike"
 	//	{
-	//		"vpk"	"cstrike_pak_dir"
+	//		"vpk"	"cstrike_pak"
 	//		"dir"	"download"
 	//	}
 	// }
-	//**********************
+	// **********************
 
-	// HL2
-	// IF YOU WANT TO MOUNT HL2 CONTENT: UNCOMMENT (remove the double slashes //) OF THE LINES BETWEEN THE ASTERICKS. Do NOT remove the double slashes from the line with the astericks (*)
-	//**********************
-	//220
-	//{
-	//	"hl2"
+	// Day of Defeat: Source (AppID 300)
+	// Identical to cstrike; overrides a few base hl2 models + portal2 footstep soundscripts
+	// **********************
+	// 300
+	// {
+	//	"dod"
 	//	{
-	//		"vpk" "hl2_misc_dir"
-	//		"vpk" "hl2_pak_dir"
-	//		"vpk" "hl2_sound_misc_dir"
-	//		"vpk" "hl2_textures_dir"
+	//		"vpk"	"dod_pak"
+	//		"dir"	"download"
 	//	}
-	//}
-	//**********************
+	// }
+	// **********************
 
-	// Episode 2
-	// IF YOU WANT TO MOUNT EPISODE 2 CONTENT: UNCOMMENT (remove the double slashes //) OF THE LINES BETWEEN THE ASTERICKS. Do NOT remove the double slashes from the line with the astericks (*)
-	//**********************
-	//420
-	//{
-	//	"ep2"
+	// Garry's Mod (AppId 4000)
+	// Overrides mega physcannon model with variant containing unimplemented player-configurable color shader;
+	// includes extremely low-quality fallback resources for dod/cstrike/episodic/ep2
+	// **********************
+	// 4000
+	// {
+	//	"garrysmod"
 	//	{
-	//		"vpk" "ep2_pak_dir"
+	//		"vpk"	"garrysmod"
+	//		"vpk"	"fallbacks"
+	//		"dir"	"download"
 	//	}
-	//}
-	//**********************
+	// }
+	// **********************
 
-	// HL2: Episode 1
-	// IF YOU WANT TO MOUNT EPISODE 1 CONTENT: UNCOMMENT (remove the double slashes //) OF THE LINES BETWEEN THE ASTERICKS. Do NOT remove the double slashes from the line with the astericks (*)
-	//**********************
-	//380
-	//{
-	//	"episodic"
+	// Half-Life 2: Deathmatch (AppID 320)
+	// Breaks HL2 NPC animations if this is mounted above base HL2/episodic as it
+	// overrides male/female/combine soldier anims with multiplayer counterparts
+	// **********************
+	// 320
+	// {
+	// 	"hl2mp"
+	// 	{
+	// 		"vpk"	"hl2mp_pak"
+	// 		"dir"	"download"
+	// 	}
+	// }
+	// **********************
+
+	// Source SDK Base 2013 MP (AppID 243750)
+	// Only uncomment the below if you do not own Half-Life 2: Deathmatch or base HL2.
+	// See above appid for side effects.
+	// **********************
+	// 243750
+	// {
+	// 	"hl2mp"
+	// 	{
+	// 		"vpk"	"hl2mp_pak"
+	// 		"dir"	"download"
+	// 	}
+	// 	"hl2"
+	// 	{
+	// 		"vpk"	"hl2_misc"
+	// 		"vpk"	"hl2_pak"
+	// 		"vpk"	"hl2_sound_misc"
+	// 		"vpk"	"hl2_sound_vo_english"
+	// 		"vpk"	"hl2_textures"
+	// 	}
+	// }
+	// **********************
+
+	// Half-Life Deathmatch: Source (AppID 360)
+	// Refer to below appid for side effects.
+	// **********************
+	// 360
+	// {
+	//	"hl1mp"
 	//	{
-	//		"vpk" "ep1_pak_dir"
+	//		"vpk"	"hl1mp_pak"
+	//		"dir"	"download"
 	//	}
-	//}
-	//**********************
-	
-	// PORTAL
-	// IF YOU WANT TO MOUNT PORTAL CONTENT: UNCOMMENT (remove the double slashes //) OF THE LINES BETWEEN THE ASTERICKS. Do NOT remove the double slashes from the line with the astericks (*)
-	//**********************
-	//400
-	//{
-	//	"portal"
+	// }
+	// **********************
+
+	// Half-Life: Source (AppID 280)
+	// Overrides certain HL2 models (e.g.: 357, crossbow) with HL1 counterparts.
+	// Mounting this will NOT enable HL:S NPC and weapon support!
+	// **********************
+	// 280
+	// {
+	// 	// Uncomment the below code block to enable Blue Shift/Opposing Force HD model pack
+	//	// "hl1_hd"
+	//	// {
+	//	// 	"vpk"	"hl1_hd_pak"
+	//	// }
+	// 	"hl1"
 	//	{
-	//		"vpk" "portal_pak_dir"
+	//		"vpk"	"hl1_pak"
 	//	}
-	//}
-	//**********************
+	// }
+	// **********************
 }
